# CCC-language

./: CMakeLists.txt  README.md  pargram.ccc  syntax.txt
include/: AST_tree.h  CCC.h  Environment.h  Lexer.h  Object.h  Syntax.h  Token.h  Type.h  TypeEnvironment.h  buffer.h  config.h
src/: AST_tree.cpp  CCC.cpp  CmakeLists.txt  Declare.cpp  Environment.cpp  Expr.cpp  Lexer.cpp  Object.cpp  Stmt.cpp  Type.cpp  TypeEnvironment.cpp  buffer.cpp  define.cpp  main.cpp
test/: ExprTest.cpp  LaxerTest.cpp  asttypetest.cpp  test.cpp  test.py
